--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -126,17 +126,17 @@
     <ClCompile Include="Application\SourceCode\Effect\AttackExplosionEffect.cpp" />
     <ClCompile Include="Application\SourceCode\Effect\BossAttackTrajectoryEffect.cpp" />
     <ClCompile Include="Application\SourceCode\Effect\SmokeEffect.cpp" />
-    <ClCompile Include="Application\SourceCode\Field\AirCollider.cpp" />
-    <ClCompile Include="Application\SourceCode\Field\Bridge.cpp" />
-    <ClCompile Include="Application\SourceCode\Field\IFieldObject.cpp" />
-    <ClCompile Include="Application\SourceCode\Field\Sun.cpp" />
-    <ClCompile Include="Application\SourceCode\Field\Tower.cpp" />
-    <ClCompile Include="Application\SourceCode\Motion\BackstepMotion.cpp" />
-    <ClCompile Include="Application\SourceCode\Motion\LogoExplosionEffect.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldObject\AirCollider.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldObject\Bridge.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldObject\IFieldObject.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldObject\Sun.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldObject\Tower.cpp" />
+    <ClCompile Include="Application\SourceCode\Motion\Player\BackstepMotion.cpp" />
+    <ClCompile Include="Application\SourceCode\Effect\LogoExplosionEffect.cpp" />
     <ClCompile Include="Application\SourceCode\PostEffect\Bloom.cpp" />
     <ClCompile Include="Application\SourceCode\Character\Boss.cpp" />
-    <ClCompile Include="Application\SourceCode\Motion\BossAttack3Motion.cpp" />
-    <ClCompile Include="Application\SourceCode\Motion\BossAttack2Motion.cpp" />
+    <ClCompile Include="Application\SourceCode\Motion\Boss\BossAttack3Motion.cpp" />
+    <ClCompile Include="Application\SourceCode\Motion\Boss\BossAttack2Motion.cpp" />
     <ClCompile Include="Application\SourceCode\Body\BossBody.cpp" />
     <ClCompile Include="Application\SourceCode\Camera\CameraManager.cpp" />
     <ClCompile Include="Application\SourceCode\Character\Character.cpp" />
@@ -148,15 +148,15 @@
     <ClCompile Include="Application\SourceCode\UI\OperationUI.cpp" />
     <ClCompile Include="Application\SourceCode\UI\PlayerGaugeUI.cpp" />
     <ClCompile Include="Application\SourceCode\Weapon\Club.cpp" />
-    <ClCompile Include="Application\SourceCode\Field\Coffin.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldObject\Coffin.cpp" />
     <ClCompile Include="Application\SourceCode\CollisionManager.cpp" />
     <ClCompile Include="Application\SourceCode\Camera\DefaultCamera.cpp" />
-    <ClCompile Include="Application\SourceCode\Motion\DrinkMotion.cpp" />
+    <ClCompile Include="Application\SourceCode\Motion\Player\DrinkMotion.cpp" />
     <ClCompile Include="Application\SourceCode\Effect\EffectManager.cpp" />
-    <ClCompile Include="Application\SourceCode\Field\FieldData.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldData\FieldData.cpp" />
     <ClCompile Include="Application\SourceCode\Field\Field.cpp" />
-    <ClCompile Include="Application\SourceCode\Field\FieldDataManager.cpp" />
-    <ClCompile Include="Application\SourceCode\Field\Gate.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldData\FieldDataManager.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldObject\Gate.cpp" />
     <ClCompile Include="Application\SourceCode\GaugeParam.cpp" />
     <ClCompile Include="Application\SourceCode\UI\GaugeUI.cpp" />
     <ClCompile Include="Application\SourceCode\Body\HumanoidBody.cpp" />
@@ -167,25 +167,25 @@
     <ClCompile Include="Application\SourceCode\UI\ItemBoxUIGroup.cpp" />
     <ClCompile Include="Application\SourceCode\UI\ItemUI.cpp" />
     <ClCompile Include="Application\SourceCode\Transition\ITransition.cpp" />
-    <ClCompile Include="Application\SourceCode\Motion\IWeaponMotion.cpp" />
+    <ClCompile Include="Application\SourceCode\Motion\Weapon\IWeaponMotion.cpp" />
     <ClCompile Include="Application\SourceCode\Effect\LeadEffect.cpp" />
     <ClCompile Include="Application\SourceCode\Menu\LogoutMenu.cpp" />
     <ClCompile Include="Application\SourceCode\Menu\MenuManager.cpp" />
     <ClCompile Include="Application\SourceCode\Motion\MotionManager.cpp" />
-    <ClCompile Include="Application\SourceCode\Motion\MoveMotion.cpp" />
+    <ClCompile Include="Application\SourceCode\Motion\Player\MoveMotion.cpp" />
     <ClCompile Include="Application\SourceCode\LoadManager.cpp" />
-    <ClCompile Include="Application\SourceCode\Motion\MalletMotion.cpp" />
+    <ClCompile Include="Application\SourceCode\Motion\Weapon\MalletMotion.cpp" />
     <ClCompile Include="Application\SourceCode\Camera\MovieCamera.cpp" />
     <ClCompile Include="Application\SourceCode\MovieEvent.cpp" />
     <ClCompile Include="Application\SourceCode\UI\NegotiationUI.cpp" />
-    <ClCompile Include="Application\SourceCode\Motion\OpenGateMotion.cpp" />
+    <ClCompile Include="Application\SourceCode\Motion\Player\OpenGateMotion.cpp" />
     <ClCompile Include="Application\SourceCode\Character\Player.cpp" />
     <ClCompile Include="Application\SourceCode\Effect\PlayerRecoveryEffect.cpp" />
     <ClCompile Include="Application\SourceCode\PostEffect\PostEffectManager.cpp" />
-    <ClCompile Include="Application\SourceCode\Field\RespawnPoint.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldObject\RespawnPoint.cpp" />
     <ClCompile Include="Application\SourceCode\Transition\RespawnTransition.cpp" />
     <ClCompile Include="Application\SourceCode\UI\ResultUI.cpp" />
-    <ClCompile Include="Application\SourceCode\Motion\RollMotion.cpp" />
+    <ClCompile Include="Application\SourceCode\Motion\Player\RollMotion.cpp" />
     <ClCompile Include="Application\SourceCode\Transition\SceneTransition.cpp" />
     <ClCompile Include="Application\SourceCode\Scene\GameScene.cpp" />
     <ClCompile Include="Application\SourceCode\Scene\LogoScene.cpp" />
@@ -200,21 +200,21 @@
     <ClCompile Include="Application\SourceCode\UI\TitleUI.cpp" />
     <ClCompile Include="Application\SourceCode\UI\MessageUI.cpp" />
     <ClCompile Include="Application\SourceCode\Transition\TransitionManager.cpp" />
-    <ClCompile Include="Application\SourceCode\Field\Tree.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldObject\Tree.cpp" />
     <ClCompile Include="Application\SourceCode\UI\UIManager.cpp" />
     <ClCompile Include="Application\SourceCode\PostEffect\Vignette.cpp" />
-    <ClCompile Include="Application\SourceCode\Field\Wall.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldObject\Wall.cpp" />
     <ClCompile Include="Application\SourceCode\Weapon\Weapon.cpp" />
     <ClCompile Include="Application\SourceCode\Effect\BloodSprayEffect.cpp" />
-    <ClCompile Include="Application\SourceCode\Field\Weed.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldObject\Grass\Weed.cpp" />
     <ClCompile Include="Application\SourceCode\Effect\IEffect.cpp" />
     <ClCompile Include="NewEngine\Collision\Collider.cpp" />
     <ClCompile Include="NewEngine\Collision\ColliderDrawer.cpp" />
     <ClCompile Include="NewEngine\Collision\ColliderObject.cpp" />
     <ClCompile Include="NewEngine\Collision\Collision.cpp" />
-    <ClCompile Include="NewEngine\Collision\Grass.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldObject\Grass\Grass.cpp" />
     <ClCompile Include="NewEngine\Collision\ICollider.cpp" />
-    <ClCompile Include="Application\SourceCode\Field\SkyIsland.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\FieldObject\SkyIsland.cpp" />
     <ClCompile Include="NewEngine\Debugger\DebugManager.cpp" />
     <ClCompile Include="NewEngine\Debugger\RendererWindow.cpp" />
     <ClCompile Include="NewEngine\Graphics\DistanceFog.cpp" />
@@ -315,18 +315,18 @@
     <ClInclude Include="Application\SourceCode\Effect\BossAttackTrajectoryEffect.h" />
     <ClInclude Include="Application\SourceCode\Effect\IEffect.h" />
     <ClInclude Include="Application\SourceCode\Effect\SmokeEffect.h" />
-    <ClInclude Include="Application\SourceCode\Field\AirCollider.h" />
-    <ClInclude Include="Application\SourceCode\Field\Bridge.h" />
-    <ClInclude Include="Application\SourceCode\Field\IFieldObject.h" />
-    <ClInclude Include="Application\SourceCode\Field\Sun.h" />
-    <ClInclude Include="Application\SourceCode\Field\Tower.h" />
-    <ClInclude Include="Application\SourceCode\Motion\BackstepMotion.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldObject\AirCollider.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldObject\Bridge.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldObject\IFieldObject.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldObject\Sun.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldObject\Tower.h" />
+    <ClInclude Include="Application\SourceCode\Motion\Player\BackstepMotion.h" />
     <ClInclude Include="Application\SourceCode\Effect\BloodSprayEffect.h" />
-    <ClInclude Include="Application\SourceCode\Motion\LogoExplosionEffect.h" />
+    <ClInclude Include="Application\SourceCode\Effect\LogoExplosionEffect.h" />
     <ClInclude Include="Application\SourceCode\PostEffect\Bloom.h" />
     <ClInclude Include="Application\SourceCode\Character\Boss.h" />
-    <ClInclude Include="Application\SourceCode\Motion\BossAttack3Motion.h" />
-    <ClInclude Include="Application\SourceCode\Motion\BossAttack2Motion.h" />
+    <ClInclude Include="Application\SourceCode\Motion\Boss\BossAttack3Motion.h" />
+    <ClInclude Include="Application\SourceCode\Motion\Boss\BossAttack2Motion.h" />
     <ClInclude Include="Application\SourceCode\Body\BossBody.h" />
     <ClInclude Include="Application\SourceCode\Camera\CameraManager.h" />
     <ClInclude Include="Application\SourceCode\Character\Character.h" />
@@ -338,15 +338,15 @@
     <ClInclude Include="Application\SourceCode\UI\OperationUI.h" />
     <ClInclude Include="Application\SourceCode\UI\PlayerGaugeUI.h" />
     <ClInclude Include="Application\SourceCode\Weapon\Club.h" />
-    <ClInclude Include="Application\SourceCode\Field\Coffin.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldObject\Coffin.h" />
     <ClInclude Include="Application\SourceCode\CollisionManager.h" />
     <ClInclude Include="Application\SourceCode\Camera\DefaultCamera.h" />
-    <ClInclude Include="Application\SourceCode\Motion\DrinkMotion.h" />
+    <ClInclude Include="Application\SourceCode\Motion\Player\DrinkMotion.h" />
     <ClInclude Include="Application\SourceCode\Effect\EffectManager.h" />
-    <ClInclude Include="Application\SourceCode\Field\FieldData.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldData\FieldData.h" />
     <ClInclude Include="Application\SourceCode\Field\Field.h" />
-    <ClInclude Include="Application\SourceCode\Field\FieldDataManager.h" />
-    <ClInclude Include="Application\SourceCode\Field\Gate.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldData\FieldDataManager.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldObject\Gate.h" />
     <ClInclude Include="Application\SourceCode\GaugeParam.h" />
     <ClInclude Include="Application\SourceCode\GaugeType.h" />
     <ClInclude Include="Application\SourceCode\UI\GaugeUI.h" />
@@ -358,26 +358,26 @@
     <ClInclude Include="Application\SourceCode\UI\ItemBoxUIGroup.h" />
     <ClInclude Include="Application\SourceCode\UI\ItemUI.h" />
     <ClInclude Include="Application\SourceCode\Transition\ITransition.h" />
-    <ClInclude Include="Application\SourceCode\Motion\IWeaponMotion.h" />
+    <ClInclude Include="Application\SourceCode\Motion\Weapon\IWeaponMotion.h" />
     <ClInclude Include="Application\SourceCode\Effect\LeadEffect.h" />
     <ClInclude Include="Application\SourceCode\Menu\LogoutMenu.h" />
     <ClInclude Include="Application\SourceCode\Menu\MenuManager.h" />
     <ClInclude Include="Application\SourceCode\Motion\MotionManager.h" />
-    <ClInclude Include="Application\SourceCode\Motion\MoveMotion.h" />
+    <ClInclude Include="Application\SourceCode\Motion\Player\MoveMotion.h" />
     <ClInclude Include="Application\SourceCode\LoadManager.h" />
-    <ClInclude Include="Application\SourceCode\Motion\MalletMotion.h" />
+    <ClInclude Include="Application\SourceCode\Motion\Weapon\MalletMotion.h" />
     <ClInclude Include="Application\SourceCode\Camera\MovieCamera.h" />
     <ClInclude Include="Application\SourceCode\MovieEvent.h" />
     <ClInclude Include="Application\SourceCode\UI\NegotiationUI.h" />
-    <ClInclude Include="Application\SourceCode\Motion\OpenGateMotion.h" />
+    <ClInclude Include="Application\SourceCode\Motion\Player\OpenGateMotion.h" />
     <ClInclude Include="Application\SourceCode\Character\Player.h" />
     <ClInclude Include="Application\SourceCode\Body\PlayerBody.h" />
     <ClInclude Include="Application\SourceCode\Effect\PlayerRecoveryEffect.h" />
     <ClInclude Include="Application\SourceCode\PostEffect\PostEffectManager.h" />
-    <ClInclude Include="Application\SourceCode\Field\RespawnPoint.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldObject\RespawnPoint.h" />
     <ClInclude Include="Application\SourceCode\Transition\RespawnTransition.h" />
     <ClInclude Include="Application\SourceCode\UI\ResultUI.h" />
-    <ClInclude Include="Application\SourceCode\Motion\RollMotion.h" />
+    <ClInclude Include="Application\SourceCode\Motion\Player\RollMotion.h" />
     <ClInclude Include="Application\SourceCode\Transition\SceneTransition.h" />
     <ClInclude Include="Application\SourceCode\Scene\GameScene.h" />
     <ClInclude Include="Application\SourceCode\Scene\IScene.h" />
@@ -392,19 +392,19 @@
     <ClInclude Include="Application\SourceCode\UI\TitleUI.h" />
     <ClInclude Include="Application\SourceCode\UI\MessageUI.h" />
     <ClInclude Include="Application\SourceCode\Transition\TransitionManager.h" />
-    <ClInclude Include="Application\SourceCode\Field\Tree.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldObject\Tree.h" />
     <ClInclude Include="Application\SourceCode\UI\UIManager.h" />
     <ClInclude Include="Application\SourceCode\PostEffect\Vignette.h" />
-    <ClInclude Include="Application\SourceCode\Field\Wall.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldObject\Wall.h" />
     <ClInclude Include="Application\SourceCode\Weapon\Weapon.h" />
-    <ClInclude Include="Application\SourceCode\Field\Weed.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldObject\Grass\Weed.h" />
     <ClInclude Include="NewEngine\Collision\Collider.h" />
     <ClInclude Include="NewEngine\Collision\ColliderDrawer.h" />
     <ClInclude Include="NewEngine\Collision\ColliderObject.h" />
     <ClInclude Include="NewEngine\Collision\Collision.h" />
-    <ClInclude Include="NewEngine\Collision\Grass.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldObject\Grass\Grass.h" />
     <ClInclude Include="NewEngine\Collision\ICollider.h" />
-    <ClInclude Include="Application\SourceCode\Field\SkyIsland.h" />
+    <ClInclude Include="Application\SourceCode\Field\FieldObject\SkyIsland.h" />
     <ClInclude Include="NewEngine\Debugger\DebugManager.h" />
     <ClInclude Include="NewEngine\Debugger\RendererWindow.h" />
     <ClInclude Include="NewEngine\Graphics\DistanceFog.h" />
